# agentic-system

./: .gitignore  Design_Ideas.md  README.md  pyproject.toml
agentic_system/: __init__.py  __main__.py  cli.py  runtime.py
agentic_system/core/: __init__.py  agent.py  environment.py  state.py
agentic_system/kernel/: __init__.py  agent_loop.py  constants.py  executors.py  history_utils.py  knowledge.py  model_router.py  orchestrator.py  policy.py  prompts.py  skills.py  storage.py  validators.py
agentic_system/prompts/: agent_role_description.json  agent_step_prompt.json  agent_system_prompt.json
agentic_system/providers/: __init__.py  _http.py  ollama.py  openai_compat.py
agentic_system/runtime/: approval.py  cli.py  debug.py  display.py  host.py  loop.py
docs/: README.md
docs/design/: development_plan.md  system_design.md
docs/specs/: README.md  architecture.md  memory.md  policy.md  schemas.md
helix/core/: agent.py  environment.py
helix/prompts/: agent_system_prompt.json
helix/runtime/: approval.py  cli.py  display.py  host.py  loop.py
tests/: test_analyze_image_from_ollama_script.py  test_context.py  test_core.py  test_delegate.py  test_docker_sandbox.py  test_generate_audio_script.py  test_generate_image_script.py  test_generate_video_script.py  test_host.py  test_local_model_service.py  test_prepare_audio_model_script.py  test_prepare_model_script.py  test_prepare_video_model_script.py  test_runtime.py  test_runtime_kernel.py  test_search_online_context_skill.py  test_skill_creation_script.py  test_skills.py
(+51 files in other folders)
